@@ -1,5 +1,10 @@
 2008-08-18  Bastien Nocera  <hadess@hadess.net>
 
+	* src/backend/bvw-test.c (on_got_metadata), (on_title_changed),
+	(main): Listen to got-metadata and title-change signals
+
+2008-08-18  Bastien Nocera  <hadess@hadess.net>
+
 	* src/plugins/ontop/totem-ontop.c (update_from_state):
 	* src/plugins/tracker/totem-tracker-widget.c
 	(totem_tracker_widget_set_property):
